Don't use Integer.valueOf() which was added in java 5.
git-svn-id: http://10.43.0.1/svn/lex/trunk@163 7faadb50-d407-0410-ad2f-ba9894573cc4